--- a/Client/src/component/charts/chart.css
+++ b/Client/src/component/charts/chart.css
@@ -13,7 +13,7 @@
     margin: 4rem auto; 
 }
 
-.month-container, .product-container {
+.month-container, .product-container, .promedios-container {
     background-color: #ffffff;
     border-radius: 10px;
     padding: 20px;
@@ -23,6 +23,7 @@
     max-width: 700px; 
 }
 
+
 h2 {
     text-align: center;
     font-family: 'Poppins', sans-serif;
@@ -30,6 +31,35 @@ h2 {
     color: #444;
     margin-bottom: 1rem;
 }
+
+
+.promedios-container div {
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start;
+    align-items: flex-start; 
+    padding: 10px 0;
+    border-bottom: 1px solid #e0e0e0; 
+    gap: 5px; 
+}
+
+.promedios-container div:last-child {
+    border-bottom: none; 
+}
+
+.promedios-container h3 {
+    font-size: 1.2rem; 
+    color: #444;
+}
+
+.promedios-container p {
+    margin: 0;
+    font-size: 1rem; 
+    color: #666;
+    font-weight: 600;
+    margin-left: 10px;
+}
+
 
 .bar-container, .doughnut-container {
     display: flex;
@@ -55,3 +85,4 @@ h2 {
         width: 100%; 
     }
 }
+
