--- a/Client/src/pages/gastos/gastos.css
+++ b/Client/src/pages/gastos/gastos.css
@@ -12,6 +12,48 @@ h1{
     font-weight: 600;
 }
 
+.form-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 12px auto;
+    justify-content: space-between; 
+  }
+  
+  /* .input-field {
+    width: 100%;
+    padding: 1rem 2rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    background-color: white;
+    color: #555;
+    transition: border 0.3s ease-in-out;
+  } */
+
+  .form-container input,select{
+    flex: 1 2 calc(22% - 18px); 
+    padding: 18px;
+    border: 1px solid rgb(5, 4, 4,0.7);
+    border-radius: 8px;
+    transition: border-color 0.3s ease-in-out;
+  }
+  
+  .form-container select:hover {
+    border: 1.2px solid rgb(6, 70, 181);
+    outline: none;
+  }
+  
+  .form-container  input:hover {
+    border: 1px solid rgb(6, 70, 181);
+    outline: none;
+  }
+  
+
+  .form-container::placeholder {
+    color: #a39a9a;
+  }
+  
 
 
 .productos{
