--- a/Client/src/component/notas/notas.css
+++ b/Client/src/component/notas/notas.css
@@ -13,7 +13,7 @@
 }
 
 .dialog-content {
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,10 +22,12 @@
     text-align: center;
 }
 
+
+
 .input-notas input {
     font-family: "Montserrat", system-ui;
     font-size: 1rem;
-    /* width: 90%; */
+    width: auto;
     padding: 12px;
     margin: 12px 0;
     border: none;
@@ -73,7 +75,31 @@
 }
 
 .nota-row td {
-    flex: 1;
+    white-space: normal; 
+    word-break: break-word;
+    padding: 10px;
+}
+
+.nota-row td input {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.nota-row td .check {
+    margin-left: 10px;
+}
+
+.nota-row td .cancel {
+    margin-left: 5px;
+}
+
+.nota-row td .edit {
+    margin-right: 10px;
+}
+
+.nota-row td .trash {
+    margin-left: 10px;
 }
 
 .nota-row td:last-child {
