--- a/Client/src/pages/login/user.css
+++ b/Client/src/pages/login/user.css
@@ -1,7 +1,7 @@
 .container-login {
   max-width: 600px;
   margin: 1rem auto;
-  padding: 3rem 2rem;
+  padding:  2rem;
   text-align: center;
   align-items: center;
   background-color: #ffffff;
@@ -27,10 +27,10 @@
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 602px) {
   .container-login {
     max-width: 90%; 
-    margin: 4rem 1rem;
+    /* margin: 4rem 1rem; */
     padding: 3rem 1.5rem; 
   }
 
@@ -62,7 +62,7 @@
   font-size: 1rem;
   width: 90%;
   padding: 10px;
-  margin: 20px 0;
+  margin: 30px 0;
   border: none;
   border-bottom: 1px solid #ccc;
   border-radius: 0;
@@ -115,4 +115,21 @@
 .count p:hover {
   transition: .3s;
   color: #d9534f;
+}
+
+
+.p3 {
+  list-style: none; 
+  padding: 0; 
+  margin: 0; 
+  text-align: left; 
+}
+
+.p3 li {
+  margin: 1.2rem auto; 
+  padding-left: 2rem;
+  text-indent: -1rem; 
+  color: #0d0d0d; 
+  font-size: 1rem; 
+  font-weight: 600;
 }
