--- a/Client/src/component/password/changePassword.css
+++ b/Client/src/component/password/changePassword.css
@@ -134,10 +134,10 @@
   
   h3{
     font-size: 1.4rem;
-    padding: 1rem;
+    /* padding: 1rem; */
     margin: 1rem 0 1.4rem;
     color: #111111;
-    font-weight: 600;
+    font-weight: 500;
   }
   
   /* Íconos de visibilidad */
