--- a/Client/src/component/password/ForgotPassword/forgotPassword.css
+++ b/Client/src/component/password/ForgotPassword/forgotPassword.css
@@ -1,21 +1,20 @@
-.container-forgot-password {
-    max-width: 600px;
-    margin: 1rem auto;
-    /* padding: 1rem 2rem; */
-    text-align: center;
-    align-items: center;
-    background-color: #ffffff;
-    border-radius: 8px;
-    font-family: "Montserrat", system-ui;
-}
 
 .link {
     position: absolute;
+    margin: .7rem 0;
     top: 20px;
     left: 20px;
     text-decoration: none;
-    color: #3498db;
+    color: #f6f6f6;
     font-weight: bold;
+    transition: color 0.3s;
+    border-bottom: 2px solid transparent;
+}
+
+.link:hover {
+    color: #56038e;
+    border-bottom: 2px solid #56038e;
+    transition: color 0.9s, border-bottom 0.9s;
 }
 
 .container-forgot {
