--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -15,6 +15,8 @@ body{
     cursor: pointer;
     margin:0;
     padding:0;   
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
 }
 
 *,
