--- a/Client/src/pages/login/user.css
+++ b/Client/src/pages/login/user.css
@@ -1,14 +1,29 @@
+
+.login-background {
+  background-image: url("../../assets/portada.png");
+  background-position: center center; /* centrado */
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed; 
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; 
+}
+
 .container-login {
-  max-width: 600px;
-  margin: 1rem auto;
-  padding:  2rem;
+  margin: 2rem auto;
+  padding: 2rem 2.5rem; 
   text-align: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 1);
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   font-family: "Montserrat", system-ui;
+  
 }
 
 .password-container {
@@ -29,9 +44,8 @@
 
 @media (max-width: 602px) {
   .container-login {
-    max-width: 90%; 
-    /* margin: 4rem 1rem; */
-    padding: 3rem 1.5rem; 
+    max-width: 600px; 
+    margin: 0 1rem;
   }
 
   .container-login h2 {
@@ -45,6 +59,11 @@
   .container-login button {
     width: 90%; 
     font-size: 0.9rem; 
+  }
+
+    .extra-links {
+    padding-bottom: 1rem;
+    font-size: 0.85rem;
   }
 }
 
@@ -65,6 +84,7 @@
   margin: 30px 0;
   border: none;
   border-bottom: 1px solid #ccc;
+  background-color: transparent;
   border-radius: 0;
   box-sizing: border-box;
   outline: none;
@@ -100,7 +120,7 @@
 .container-login button:hover {
   color: #ffffff;
   transition: .3s;
-  background-color: rgb(0, 86, 179, 0.9);
+  background-color: rgba(128, 0, 179, 0.9);
 }
 
 .message {
@@ -142,6 +162,15 @@
   color: #0d0d0d; 
   font-size: 1rem; 
   font-weight: 600;
+}
+
+
+
+.extra-links {
+  display: flex;
+  justify-content: center;
+  gap: 2rem; 
+  margin: 2rem auto 1rem;
 }
 
 
