--- a/Client/src/component/charts/chart.css
+++ b/Client/src/component/charts/chart.css
@@ -10,6 +10,44 @@
   margin: 4rem auto;
 }
 
+.promedios {
+  width: 100%;
+  grid-column: 1 / -1; /* Ocupa todo el ancho */
+  margin-bottom: 2rem;
+}
+
+.card.promedios {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  grid-column: 1 / -1;
+  margin-bottom: 2rem;
+}
+
+
+.card.promedios ul.metrics-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2rem;
+  width: 100%;
+}
+
+.card.promedios ul.metrics-list li {
+  flex: 1 1 180px;
+  min-width: 250px;
+  max-width: 500px;
+  align-items: flex-start;
+  border-bottom: none;
+  border-right: 1px solid #aaaaaa;
+  padding: 0 1rem;
+  margin-bottom: 0;
+}
+
+.card.promedios ul.metrics-list li:last-child {
+  border-right: none;
+}
+
 .card {
   background: #fff;
   border-radius: 12px;
@@ -17,16 +55,25 @@
   box-shadow: 0 4px 8px rgba(0,0,0,0.05);
   flex: 1 1 40%;
   min-width: 250px;
-  max-width: 700px;
+  max-width: 1000px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
 }
 
 .card h2 {
   text-align: center;
   font-family: 'Poppins', sans-serif;
   font-size: 1.5rem;
-  color: #333;
-  margin-bottom: 1rem;
+  color: #2c3e50;
+  margin-bottom: 1.5rem;
+  border-bottom: 2px solid #3498db;
+  padding-bottom: 0.5rem;
 }
+
 
 
 .metrics-list {
@@ -36,10 +83,11 @@
 }
 
 .metrics-list p{
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 700;
+  color: #2c3e50;
 }
-
+/* 
 .metrics-list li {
   display: flex;
   flex-direction: column; 
@@ -50,12 +98,21 @@
 
 .metrics-list li:last-child {
   border-bottom: none;
-}
+} */
 
 .metrics-list h3 {
-  font-size: 1.1rem;
-  color: #444;
-  margin-bottom: .4rem;
+  font-size: 1rem;
+  color: #34495e;
+  margin-bottom: 0.5rem;
+  font-weight: 600;
+}
+
+.charts-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .chart-box {
@@ -72,34 +129,58 @@
 .dato1 {
   font-weight: 700;
   font-size: 1.5rem;
+  color: #e74c3c;
 }
 
 .dato2 {
   margin: 1rem auto;
   font-weight: 700;
   font-size: 1.1rem;
+  color: #27ae60;
 }
 
+.top-products-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0.5rem 1.5rem;
+  width: 100%;
 
+}
 
+.top-products-list p{
+  font-size: 1.1rem;
+  /* font-weight: 600; */
+  padding: .7rem auto;
+}
 
 
 @media (max-width: 768px) {
   .chart-container {
     flex-direction: column;
+    grid-template-columns: 1fr;
+    gap: 1rem;
     padding: 1rem;
   }
 
   .card {
     width: 100%;
-    flex-basis: 100%;
+    flex-basis: 100%;   
+  }
+
+    .charts-grid {
+    flex-direction: column;
+    gap: 1rem;
   }
 
   .chart-box {
-    height: 350px;
+    height: 300px !important;
   }
 
   .metrics-list li {
     align-items: flex-start;
+  }
+
+  .top-products-list {
+    grid-template-columns: 1fr; 
   }
 }
